--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -32,7 +32,7 @@
 	author = {R. Vergel},
 	title = {Getting started with SDSoC},
 	year = 2018,
-	note = {\newline https://github.com/Xilinx/SDSoC-Tutorials/tree/master/getting-started-tutorial},
+	note = {https://github.com/Xilinx/SDSoC-Tutorials/tree/master/getting-started-tutorial},
 	organization = {Xilinx Inc.}
 }
 
@@ -52,23 +52,23 @@
 
 @MISC{pptHowest,
 	author = {Friedel Nollet},
-	title = {powerpoint: HOWEST 2019-2020 Sanger and NGS},
-	year = 2019,
+	title = {powerpoint: HOWEST cursus 'nieuwste ontwikkelingen in de biotechnologie' 2019-2020 Hoofdstuk Sanger and NGS (dutch)},
+	year = 2019
 }
 
-@MISC{1,
+@MISC{2,
 	organization = {CLCbio},
 	title = {Bioinformatics company},
 	howpublished = {http://www.clccell.com/download.html}
 }
 
-@MISC{2,
+@MISC{3,
 	organization = {Cray Inc.},
 	title = {Bioinformatics company},
 	howpublished = {https://www.cray.com/}
 }
 
-@MISC{3,
+@MISC{4,
 	organization = {Timelogics},
 	title = {Bioinformatics company},
 	howpublished = {http://www.timelogic.com/}
@@ -78,13 +78,13 @@
 	author = {O.O. Storaasli, D. Strenski},
 	year = 2011,
 	title = {Accelerating Genome Sequencing 100X with FPGAs},
-	howpublished = {\newline http://ft.ornl.gov/~olaf/pubs/RSSIOlafDave.pdf}
+	howpublished = {http://ft.ornl.gov/~olaf/pubs/RSSIOlafDave.pdf}
 }
 
 
-@MISC{12,
+@MISC{,
 	title = {IGV download page},
-	howpublished = {\newline http://software.broadinstitute.org/software/igv/}
+	howpublished = {http://software.broadinstitute.org/software/igv/}
 }
 
 
@@ -97,60 +97,71 @@
 
 @MISC{mendel,
 	organization = {wikimedia},
-	title = {figure: Gregor Mendel portrait},
+	title = {Gregor Mendel portrait},
 	howpublished = {https://upload.wikimedia.org/wikipedia/commons/8/87/Gregor\_Mendel\_portrait.jpg}
 }
 
 
 @MISC{dna,
 	organization = {wikimedia},
-	title = {figure: Double stranded DNA with coloured bases},
-	howpublished = {\newline https://upload.wikimedia.org/wikipedia/commons/thumb/1/14/Double\_stranded\_DNA\_with\_coloured\_bases.png/1024px-Double\_stranded\_DNA\_with\_coloured\_bases.png}
+	title = {Double stranded DNA with coloured bases},
+	howpublished = {https://upload.wikimedia.org/wikipedia/commons/thumb/1/14/Double\_stranded\_DNA\_with\_coloured\_bases.png/1024px-Double\_stranded\_DNA\_with\_coloured\_bases.png}
 }
 
 
 @MISC{dnachemical,
 	organization = {wikimedia},
-	title = {figure: DNA chemical structure},
-	howpublished = {figure: DNA chemical structure}
+	title = {DNA chemical structure}
 }
 
 
 @MISC{8,
 	organization = {wikimedia},
-	title = {figure: Karyotype},
-	howpublished = {\newline https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Karyotype.png/800px-Karyotype.png}
+	title = {Human karyotype},
+	howpublished = {https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Karyotype.png/800px-Karyotype.png}
 }
 
 
-@MISC{10,
+@MISC{11,
 	organization = {anatomybox},
-	title = {figure: Trisomy 21 male},
-	howpublished = {\newline http://www.anatomybox.com/wp-content/uploads/2011/07/Trisomy-21-male.png}
+	title = {Trisomy 21 male}
+	howpublished = {http://www.anatomybox.com/wp-content/uploads/2011/07/Trisomy-21-male.png}
 }
 
 
 @MISC{fpgacomparison,
 	organization = {Microsoft},
-	title = {figure: azure machine learning fpga comparison},
-	howpublished = {\newline https://docs.microsoft.com/en-us/azure/machine-learning/service/media/concept-accelerate-with-fpgas/azure-machine-learning-fpga-comparison.png}
+	title = {Azure machine learning FPGA comparison},
+	howpublished = {https://docs.microsoft.com/en-us/azure/machine-learning/service/media/concept-accelerate-with-fpgas/azure-machine-learning-fpga-comparison.png}
 }
 
+
+@MISC{10,
+	organization = {Lighterra},
+	title = {Sequential working of microprocessor},
+	howpublished = {http://www.lighterra.com/papers/modernmicroprocessors/sequential2.png}
+}
 
 @MISC{9,
-	organization = {Lighterra},
-	title = {figure: sequential working of microprocessor},
-	howpublished = {\newline http://www.lighterra.com/papers/modernmicroprocessors/sequential2.png}
-}
-
-@MISC{13,
 	organization = {Galaxy.org},
 	title = {Online bioinformatics tools},
-	howpublished = {\newline https://usegalaxy.org/}
+	howpublished = {https://usegalaxy.org/}
 }
 
 @MISC{fpgaworkings,
 	organization = {loyola},
-	title = {figure: fpga diagram},
+	title = {FPGA diagram},
 	howpublished = {https://evergreen.loyola.edu/dhhoe/www/FPGA\_diagram.png}
+}
+
+@MISC{FPGAacc, 
+	author = {James Arram, et al},
+	title = {Leveraging FPGAs for Accelerating Short Read Alignment},
+	year = 2015
+}
+
+@MISC{FPGAacc2, 
+	author = {Nathaniel McVicar, et al},
+	title = {FPGA Acceleration of Short Read Alignment},
+	year = 2012
 }
