--- a/samenvatting.tex
+++ b/samenvatting.tex
@@ -1,15 +1,15 @@
-Tijdens de laatste decennia hebben biologen steeds grote stappen gezet in het begrijpen van het leven; dieren, mensen en planten. Sinds het opkomen van DNA sequencing technieken is genetica een groot onderdeel geworden van de biologie. Maar, door de hoeveelheid data die verwerkt moet worden, is het analyseren van genetische toepassingen erg rekenintensief voor computers, bijvoorbeeld bij het menselijk genoom, wat een lengte heeft van 3 miljard baseparen.
+Tijdens de laatste decennia hebben biologen grote stappen gezet in het begrijpen van het leven; dieren, mensen en planten. Sinds het opkomen van DNA sequencing technieken is genetica een onderdeel geworden van de biologie. Maar, door de hoeveelheid DNA sequencing data die verwerkt moet worden, is het analyseren van genetische toepassingen erg rekenintensief voor computers, bijvoorbeeld bij analyse van het menselijk genoom, wat bestaat uit 3 miljard baseparen.
 
-Een grote fundamentele applicatie binnen de genetica is het "short read genome mapping" of het "short read alignment", wat probeert de locatie van een kort stukje DNA terug te vinden in het volledige genoom. Als er genoeg van deze "reads" gealigneerd kunnen worden, kan hier veel interessante info uit worden afgeleidt. Bijvoorbeeld, bij voldoende aligneringen kunnen we het volledige genoom afleiden uit ons bemonsterd DNA. Zelfs aan het aantal reads die aligneren op 1 plaats (wat men ook wel de "reading depth" noemt) kunnen we dingen afleiden, zoals bijvoorbeeld een trisomy van chromosoom-21 bij pati\"enten met het Down syndroom.
+Een grote fundamentele applicatie binnen de genetica is het "short read genome mapping" of het "short read alignment", wat probeert de locatie van een kort stukje DNA terug te vinden in het volledige genoom. Als er genoeg van deze "reads" gealigneerd kunnen worden, kan hier veel interessante info uit worden afgeleidt. Bijvoorbeeld, bij voldoende aligneringen kunnen we het volledige genoom afleiden uit ons bemonsterd DNA. Zo kan men op basis van het aantal reads die aligneren op 1 genomische regio (wat men ook wel de "reading depth" noemt) te weten komen of er een trisomy van chromosoom-21 (Down syndroom) aanwezig is bij een foetus.
 
-Typisch word een "read" vergeleken met het volledige genoom via het Smith-Waterman algoritme. Als resultaat krijgen we dan de positie van deze read terug in het genoom.
+Typisch wordt een "read" vergeleken met het volledige genoom via het Smith-Waterman algoritme. Als resultaat krijgen we dan de positie van deze read terug in het genoom.
 
-Een volledig genoom in 1 keer bepalen kan niet, vanwege de technieken die de sequencing machines gebruiken. Deze machines kunnen enkel reads van een korte lengte aan, met een maximum van een paar honderd baseparen ineens. Tegenwoordig wordt er meer en meer DNA gesequenced, en dit groeit exponentieel. Gezien er meer vraag is naar goede aligneringstechnieken, moeten deze ook worden verbeterd om bij te blijven met de stijgende vraag naar DNA sequencing. Maar, meestal worden deze nieuwe technieken enkel geprogrammeerd op de standaard processoren van een computer.
+Een volledige genoomsequentie in 1 keer bepalen kan niet, vanwege de technieken die de sequencing machines gebruiken. Deze machines kunnen enkel reads van een korte lengte aan, met een maximum van een paar honderd baseparen ineens. Tegenwoordig wordt er meer en meer DNA gesequenced, en dit groeit exponentieel. Gezien er meer vraag is naar goede aligneringstechnieken, moeten deze ook worden verbeterd om bij te blijven met de stijgende vraag naar DNA sequencing. Maar, meestal worden deze nieuwe technieken enkel geprogrammeerd op de standaard processoren van een computer.
 
 In deze thesis zullen we het Smith-Waterman algoritme bestuderen, en uit deze studie leren we dat een implementatie op een "gewone" processor niet de beste optie is. Er bestaan andere elektronische technologie\"en om dit algoritme op uit te voeren, zoals bijvoorbeeld een FPGA. We zullen een MPSoC gebruiken, die beide een stuk ARM (de "gewone" processor) en FPGA (de gespecialiseerde hardware) aan boord heeft.
 
 In de meeste klinische toepassingen waar dit soort alignering gebruikt wordt, is het aantal reads die gealigneerd moeten worden in de miljoenen. Als ultiem resultaat willen we de "time-to-result" van een klinische test verkleinen, zodat de rekenkracht van de computers niet de bottleneck wordt van de tests.
 
-Eerst werd een softwareversie van het algoritme ge\"implementeerd op de ARM processor. Deze hebben we ook getest met het SARS-CoV-2 (coronavirus) als een dataset, en vergeleken met resultaten bekomen via traditionele methoden. Hier zagen we dat onze implementatie dezelfde resultaten heeft. Verder waren we ook in staat om mutaties te ontdekken in het gemonsterde genoom in vergelijking met onze referentie.
+Eerst werd een softwareversie van het algoritme ge\"implementeerd op de ARM processor. Deze hebben we getest met een sequencing van het SARS-CoV-2 (coronavirus) als een dataset, en vergeleken met resultaten bekomen via een gekend bio-informatische software (Galaxy). Hier zagen we dat onze implementatie dezelfde resultaten heeft. Verder waren we ook in staat om mutaties te ontdekken in het gemonsterde genoom in vergelijking met onze referentie.
 
 Nadat we dit ook ge\"implementeerd hebben op de FPGA gespecialiseerde hardware, hebben we een implementatie die dezelfde resultaten betoonde als onze softwareversie, maar deze resultaten 4 keer sneller kan bereiken.
