feedback verwerkt abstract en summary

--- a/thesis.tex
+++ b/thesis.tex
@@ -24,6 +24,7 @@
 \usepackage{sectsty}					% aanpassen van de fonts van sections en chapters
 %\usepackage[nottoc,numbib]{tocbibind}	% Bibliography mee in de ToC
 \usepackage{fancyvrb,newverbs,xcolor,colortbl}
+\usepackage{subcaption}					% subfigures
 
 \allsectionsfont{\sffamily}
 \chapterfont{\raggedleft\sffamily}
