--- a/voorwoord.tex
+++ b/voorwoord.tex
@@ -2,12 +2,12 @@ From the Brno University of Technology (BUT) I would like to thank the following
 \begin{itemize}
 	\item \textbf{Ing. V\'aclav \v Simek} as my supervisor for providing feedback on the process of executing this thesis, as well as helping with the administrative side of the Erasmus exchange and recommending courses at BUT.
 	\item \textbf{Ing. Tom\'a\v s Mart\'inek, Ph.D.} for providing the learning materials towards HLS and to point out the idea behind the BFAST algorithm.
-	\item \textbf{Ing. Vojt\v ech Mr\'azek, Ph.D.} for providing the ZCU 104 evaluation kit hardware
+	\item \textbf{Ing. Vojt\v ech Mr\'azek, Ph.D.} for providing the ZCU 104 evaluation kit hardware.
 \end{itemize}
 
 From KU Leuven I would like to thank the following people:
 \begin{itemize}
-	\item \textbf{Ing. Jonas Lannoo
+	\item \textbf{Ing. Jonas Lannoo,
 		Ph.D. Student} as a supervisor for his support during my Erasmus towards the thesis.
 	\item \textbf{Ing. Sammy Verslype} for the original idea to try and pick a subject where I try to accelerate an algorithm using an FPGA equipped platform.
 \end{itemize} 
@@ -20,5 +20,11 @@ Furthermore, I would like to thank \textbf{ir. Joan Peuteman, Ph.D.}, \textbf{ir
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.25\textwidth]{vut.png}
+	\begin{subfigure}[H]{0.3\textwidth}
+		\includegraphics[width=\textwidth]{vut.png}
+	\end{subfigure}
+\qquad
+	\begin{subfigure}[H]{0.3\textwidth}
+		\includegraphics[width=\textwidth]{kul.png}
+	\end{subfigure}
 \end{figure}
